--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ twitter:
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
+  name: kellas
   email: example@domain.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
@@ -165,6 +165,8 @@ kramdown:
     block:
       line_numbers: true
       start_line: 1
+  input: GFM
+  math_engine: mathjax
 
 collections:
   tabs:
